// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 0 for no item 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h4
      className="page-header__title"
    >
      viewing 
      <span>
        0
      </span>
       expenses totalling 
      <span>
        $0.00
      </span>
       
    </h4>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render for 1 item 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h4
      className="page-header__title"
    >
      viewing 
      <span>
        1
      </span>
       expenses totalling 
      <span>
        $1.95
      </span>
       
    </h4>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render multiple item 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h4
      className="page-header__title"
    >
      viewing 
      <span>
        3
      </span>
       expenses totalling 
      <span>
        $1,141.95
      </span>
       
    </h4>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;
